<resources>
    <string name="app_name">Aptonia</string>

    <string name="fragment_add">Add</string>
    <string name="fragment_schedule">Schedule</string>
    <string name="fragment_settings">Settings</string>

    <string name="first">1</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="addItem">Add item</string>
    <string name="deleteItem">Delete item</string>

    <string name="selectItem">Select item</string>
    <string name="count">Count</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="remaining">remaining</string>
    <string name="itemID">itemID</string>

    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="select_range">Select range</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="confirm">Confirm</string>
    <string name="month_year">Month Year</string>
    <string name="dd_mm">dd/mm</string>
    <string name="item_name">item name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="fragment_manage">Manage</string>
    <string name="search">search</string>
    <string name="search_product">Search product</string>
    <string name="settings">settings</string>
    <string name="delete">delete</string>
    <string name="ID">ID</string>
    <string name="product_name">Product name</string>
    <string name="change">Change</string>
    <string name="activity_name">Activity name</string>
    <string name="item_image">Item image</string>
    <string name="barcode_text">Barcode Text</string>
    <string name="camera_text">Camera text</string>
    <string name="days_left">Days left</string>
    <string name="date">Date</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="message">Message</string>
    <string name="aptonia_standart_control">Aptonia standart control</string>
    <string name="add_product">Add product</string>
    <string name="scanId">scanID</string>
    <string name="next">Next</string>
    <string name="version_name">Version name</string>
    <string name="version_id">Version id</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_head">Register your mobile</string>
    <string name="register">Register</string>
    <string name="shop_id">Shop ID</string>
    <string name="time">Time</string>
    <string name="Uploading">Uploading</string>
    <string name="x_of_y">X of Y</string>
    <string name="expiration_date">Expiration date</string>
    <string name="bitmap">bitmap</string>
    <string name="manual_search">Manual search</string>
    <string name="cube_scan">Scan with CubeInStore:</string>
    <string name="barcode_view">barcode_view</string>
    <string name="manual_search_title">Item not found. Try manual search:</string>
    <string name="remove_item">Remove item</string>
    <string name="remove">Remove</string>
</resources>