<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/schedule_fragment_remove_item_dialog_remove_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_item"
        android:textAlignment="textStart"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/schedule_fragment_remove_item_dialog_image_view"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/item_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/schedule_fragment_remove_item_dialog_remove_item" />

    <TextView
        android:id="@+id/schedule_fragment_remove_item_dialog_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/schedule_fragment_remove_item_dialog_image_view"
        app:layout_constraintTop_toBottomOf="@+id/schedule_fragment_remove_item_dialog_remove_item"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/schedule_fragment_remove_item_dialog_id"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/ID"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/schedule_fragment_remove_item_dialog_image_view"
        app:layout_constraintTop_toBottomOf="@+id/schedule_fragment_remove_item_dialog_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/schedule_fragment_remove_item_dialog_date"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/date"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/schedule_fragment_remove_item_dialog_image_view"
        app:layout_constraintTop_toBottomOf="@id/schedule_fragment_remove_item_dialog_id"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/schedule_fragment_remove_item_dialog_image_view">

        <Button
            android:id="@+id/schedule_fragment_remove_item_dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/schedule_fragment_remove_item_dialog_remove_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/remove"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            style="@style/Animation.Design.BottomSheetDialog"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>