<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_fragment_add_item_dialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/add_fragment_add_item_dialog_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addItem"
        android:textAlignment="textStart"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_fragment_add_item_dialog_item_image"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/item_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_fragment_add_item_dialog_add_item" />

    <TextView
        android:id="@+id/add_fragment_add_item_dialog_item_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/add_fragment_add_item_dialog_item_image"
        app:layout_constraintTop_toBottomOf="@+id/add_fragment_add_item_dialog_add_item"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/add_fragment_add_item_dialog_item_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/ID"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/add_fragment_add_item_dialog_item_image"
        app:layout_constraintTop_toBottomOf="@+id/add_fragment_add_item_dialog_item_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/add_fragment_add_item_dialog_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_fragment_add_item_dialog_item_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_fragment_add_item_dialog_select_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="creditCardExpirationDate"
            android:hint="@string/expiration_date"
            android:inputType="number"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/add_fragment_add_item_dialog_select_date">

        <Button
            android:id="@+id/add_fragment_add_item_dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/add_fragment_add_item_dialog_confirm_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            style="@style/Animation.Design.BottomSheetDialog"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>