<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/manual_search_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/manual_search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        app:title="@string/manual_search"/>

    <TextView
        android:id="@+id/manual_search_barcode_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/cube_scan"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/manual_search_toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/manual_search_barcode_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/manual_search_barcode_title"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/barcode_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manual_search_id_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/manual_search_barcode_view"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_search_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ID"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manual_search_name_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/manual_search_id_layout"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_search_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/product_name"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/manual_search_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/manual_search_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            style="@style/Animation.Design.BottomSheetDialog"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>