<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/manage_fragment_add_product_dialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/manage_fragment_add_product_dialog_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textAlignment="textStart"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/manage_fragment_add_product_dialog_item_image"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/item_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manage_fragment_add_product_dialog_item_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manage_fragment_add_product_dialog_item_id"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/manage_fragment_add_product_dialog_scan_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_add_product_dialog_add_item"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manage_fragment_add_product_dialog_item_id_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ID"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manage_fragment_add_product_dialog_scan_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ripple"
        android:foreground="@drawable/scan_id_logo"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/scanId"
        app:backgroundTint="@color/secondary_color"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_add_product_dialog_add_item"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_add_product_dialog_item_image">

        <Button
            android:id="@+id/manage_fragment_add_product_dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/manage_fragment_add_product_dialog_confirm_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/next"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            style="@style/Animation.Design.BottomSheetDialog"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>