<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manage_fragment_recycler_view_item_dialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/manage_fragment_recycler_view_item_dialog_item_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textAlignment="textStart"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manage_fragment_recycler_view_item_dialog_item_id_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemID"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_recycler_view_item_dialog_item_name_text_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manage_fragment_recycler_view_item_dialog_item_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_recycler_view_item_dialog_item_id_text_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manage_fragment_recycler_view_item_dialog_item_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_recycler_view_item_dialog_item_name_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ID"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_recycler_view_item_dialog_item_id_edit_text">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            style="@style/Animation.Design.BottomSheetDialog"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>