<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manage_fragment_recycler_view_item_dialog"
    android:padding="10dp"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/manage_fragment_item_options_dialog_item_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textAlignment="textStart"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/manage_fragment_item_options_dialog_item_name_text_view"
        tools:layout_editor_absoluteX="0dp">

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/manage_fragment_item_options_dialog_delete_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/caution"
            android:text="@string/delete"
            android:textColor="@color/black" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/manage_fragment_item_options_dialog_change_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/change"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>